--- a/esportswebpage/index.html
+++ b/esportswebpage/index.html
@@ -3,6 +3,9 @@
 <head>
 	<title>E-Sports Webpage</title>
 	<link rel="stylesheet" href="resources\css\style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Karla:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="header">
@@ -14,11 +17,64 @@
 	   </div>
 	</div>
 	
-	<div class="mission">
-		<img class="mission-img" src="resources\mission-img.jpg">
-		<h2>Our quest in E-sports</h2>
-		<p>Join us on our journey to dominate and conquer the world of E-Sports!</p>
-		<p>We strive to achieve perfection through dedication,commitment, and respect</p>
+	<div class="mission" id="mission">
+		<div class="missioncontainer">
+			<h2>Our quest in E-sports</h2>
+			<p>Join us on our journey to dominate and conquer the world of E-Sports!</p>
+			<p>We strive to achieve perfection through dedication,commitment, and respect</p>
+		</div>
 	</div>
+	
+	<br>
+	
+	<br>
+	
+	<br>
+	
+	<br>
+	
+	<div class="E-Sports" id="E-Sports">
+		<div class="E-Sportscontainer">
+			<h2>Our E-Sports Stomping Grounds</h2>
+			<p> Below are just some of the E-Sports we currently compete in</p>
+		</div>
+		<div class="allsports">
+			<div class="sport">
+				<img src="resources\codwarzone.jpg">
+				<span> Call of Duty: Warzone</span>
+			</div>
+			<div class="sport">
+				<img src="resources\fifa.jpg">
+				<span> Fifa 2021 </span>
+			</div>
+			<div class="sport">
+				<img src="resources\leagueoflegends.jpg">
+				<span> League of Legends </span>
+			</div>
+			<div class="sport">
+				<img src="resources\rocketleague.png">
+				<span> Rocket League </span>
+			</div>
+		</div>
+	</div>
+	
+	<div class="Roster" id="Roster">
+		<h2> Come meet our team ! </h2>
+		<div class="Rostermembers">
+			<div class="member">
+				<img src="resources\sandman.jpg">
+				<figcaption>Sandman</figcaption>
+			</div>
+			<div class="member">
+				<img src="resources\reidboyy.jpg">
+				<figcaption>Reidboyy</figcaption>
+			</div>
+			<div class="member">
+				<img src="resources\Karla.jpg">
+				<figcaption>Karla</figcaption>
+			</div>
+		</div>	
+	</div>
+<footer> Sandmanpt2@gmail.com </footer>
 </body>
 </html>
